--- a/node/src/index.html
+++ b/node/src/index.html
@@ -51,7 +51,7 @@
     ga('send', 'pageview');
   </script>
   <script data-pace-options='{ "target": ".content-wrap", "ghostTime": 1000 }'></script>
-
+  <script src="/assets/msal.js"></script>
   <% if (htmlWebpackPlugin.options.metadata.isDevServer && htmlWebpackPlugin.options.metadata.HMR !== true) { %>
   <!-- Webpack Dev Server reload -->
   <script src="http://<%= htmlWebpackPlugin.options.metadata.host %>:<%= htmlWebpackPlugin.options.metadata.port %>/webpack-dev-server.js"></script>
